# lamina-flow

./: .gitignore  .gitmodules  LICENSE  README.md
executor/: main.py  requirements.txt
executor/app/api/dtos/: execution.py
executor/app/api/routers/: execution.py
executor/app/services/: service_execution.py
filesystem/: main.py
filesystem/app/api/dtos/: workspace.py
filesystem/app/api/routers/: ai.py  multiuser.py  node_templates.py  settings.py  workspace.py
filesystem/app/models/: node_template.py
filesystem/app/services/: service_ai.py  service_node_templates.py  service_settings.py  service_workspace.py
filesystem/data/templates_library/: custom_node.json  webhook.json
filesystem/data/workspaces/c01519f6-ad75-46a5-a492-585689e3ec01/: workspace.json
filesystem/data/workspaces/f13a412c-616d-430e-967a-e374ff2ed320/: workspace.json
frontend/: README.md  next.config.ts  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  declarations.d.ts  main.tsx
frontend/src/api/: executor.ts
frontend/src/api/client/: index.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/app/: layout.tsx  page.tsx
frontend/src/app/application/: layout.tsx  page.tsx
frontend/src/components/: app-navbar.tsx  app-sidebar.tsx
frontend/src/components/app/: chat-interface.tsx  create-project-dialog.tsx  delete-project-dialog.tsx
frontend/src/components/builder/: builder-navigation.tsx  generic-node.tsx  workflow-editor.tsx  workflow-empty.tsx  workflow-file-sidebar.tsx  workflow-navigation.tsx  workflow-no-selected.tsx  workflow-node-command.tsx  workflow-properties.tsx  workflow-sidebar.tsx  workflow-tabs.tsx
frontend/src/components/common/: ChatInterface.tsx  SectionCard.tsx  StatusBanner.tsx
frontend/src/components/templating/: designer.tsx  preview.tsx  sidebar.tsx  types.ts
frontend/src/components/ui/: button-copy.tsx  button.tsx  data-table.tsx  dynamic-breadcrumb.tsx  mode-toggle.tsx  resizable.tsx
frontend/src/hooks/: useUnsavedChanges.ts  useWorkflowSync.ts
frontend/src/layout/: RootLayout.tsx
frontend/src/layout/navbar/: index.tsx  nav-breadcrumb.tsx
frontend/src/layout/page/: index.tsx
frontend/src/layout/workspace/: index.tsx  sidebar.tsx
frontend/src/lib/: data.ts  utils.ts
frontend/src/pages/deployment-details/: index.tsx
frontend/src/pages/deployments/: index.tsx
frontend/src/redux/: store.ts
frontend/src/router/: index.tsx
frontend/src/store/: app-dispatcher.ts  store.ts  types.ts
frontend/src/types/: workspace.ts
lamina/: .env.example  docker-compose.yml  makefile  package-lock.json  package.json  turbo.json
lamina-engine/: .env.example  Cargo.toml  Makefile  README.md
lamina-engine/crates/cli/: Cargo.toml
lamina-engine/crates/cli/src/: main.rs
lamina-engine/crates/cli/src/commands/: cancel.rs  logs.rs  mod.rs  run.rs  status.rs  watch.rs
lamina-engine/crates/core/: Cargo.toml
lamina-engine/crates/core/src/: dag.rs  lib.rs  manifest.rs  messages.rs  state.rs  subjects.rs  workflow.rs
lamina-engine/crates/logging/: Cargo.toml
lamina-engine/crates/logging/src/: adapter.rs  lib.rs  postgres.rs  sqlite.rs
lamina-engine/crates/orchestrator/: Cargo.toml
lamina-engine/crates/orchestrator/src/: execution.rs  main.rs  nats.rs  orchestrator.rs  shutdown.rs
lamina-engine/crates/orchestrator/src/api/: rest.rs
lamina-engine/crates/worker/: Cargo.toml
lamina-engine/crates/worker/src/: config.rs  dispatcher.rs  logger.rs  main.rs  nats.rs  registry.rs  shutdown.rs  worker.rs
lamina-engine/crates/worker/src/runtime/: endpoint.rs  ephemeral.rs  mod.rs  persistent.rs
lamina-engine/docker/: Dockerfile.orchestrator  Dockerfile.worker  docker-compose.dev.yml  docker-compose.yml
lamina-engine/scripts/: dev.ps1
lamina-engine/test/: workflow.json
lamina-engine/test/nodes/api-entry/: Api-Entry.json  node.py
lamina-engine/test/nodes/uppercase/: node.json  node.py
lamina/apps/frontend/: tsconfig.node.json  vite.config.ts
lamina/infrastructure/nats/: nats-server.conf
lamina/infrastructure/redis/: redis.conf
(+57 files in other folders)
