[workspace]
members = [
    "crates/core",
    "crates/orchestrator",
    "crates/worker",
    "crates/logging",
    "crates/cli",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-nats = "0.35"
axum = "0.7"
tonic = "0.11"
prost = "0.12"
uuid = { version = "1.8", features = ["v4"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "sqlite", "uuid", "chrono"] }
tokio-process = "1.0"
dashmap = "5.5"
futures-util = "=0.3.31"
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
async-trait = "0.1"
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-signal = "0.3"
dotenvy = "0.15"
bytes = "1.6"