[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
lamina-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-nats = { workspace = true }
axum = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
futures-util = { workspace = true }
tokio-stream = { workspace = true }
dotenvy = { workspace = true }
tower-http = { version = "0.5", features = ["cors"] }