[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
lamina-core = { path = "../core" }
logging = { path = "../logging" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-nats = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
futures-util = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
dotenvy = { workspace = true }